--- a/views/users/Profile/userProfile.ejs
+++ b/views/users/Profile/userProfile.ejs
@@ -126,6 +126,9 @@
 										<a href="/wishlist"> <button type="button" class="btn btn-outline-dark"
 												style="width: 280px;">Wishlist</button> </a>
 									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
+										<a href="/wallet"> <button type="button" class="btn btn-outline-dark" style="width: 280px;">Wallet</button> </a>
+									</li>
 
 								</ul>
 							</div>
