--- a/views/users/Profile/addAddress.ejs
+++ b/views/users/Profile/addAddress.ejs
@@ -119,6 +119,9 @@
                                         <a href="/wishlist"> <button type="button" class="btn btn-outline-dark"
                                                 style="width: 280px;">Wishlist</button> </a>
                                     </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
+										<a href="/wallet"> <button type="button" class="btn btn-outline-dark" style="width: 280px;">Wallet</button> </a>
+									</li>
 
                                 </ul>
                             </div>
@@ -374,7 +377,7 @@
                         icon: "success",
                         text: response.data.message
                     }).then(() => {
-                        window.location.href = '/addAddress'; // Redirect if successful
+                        window.location.href = '/address'; // Redirect if successful
                     })
                 } else {
                     Swal.fire({
