--- a/views/users/Profile/userAddressManagement.ejs
+++ b/views/users/Profile/userAddressManagement.ejs
@@ -121,6 +121,9 @@
 									<a href="/wishlist"> <button type="button" class="btn btn-outline-dark"
 											style="width: 280px;">Wishlist</button> </a>
 									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
+										<a href="/wallet"> <button type="button" class="btn btn-outline-dark" style="width: 280px;">Wallet</button> </a>
+									</li>
 
 								</ul>
 							</div>
@@ -211,6 +214,7 @@
 		}
 
 		async function deleteAddress(id) {
+			console.log(id,'it aa id');
 			const confirmation = await Swal.fire({
 				title: 'Are you sure?',
 				text: 'You won\'t be able to revert this!',
