--- a/views/users/checkout/checkoutSummary.ejs
+++ b/views/users/checkout/checkoutSummary.ejs
@@ -92,7 +92,6 @@
 									<th class="column-5"></th>
 								</tr>
 
-								<% let totalAmount=0 %>
 								
 								<% for(let i=0 ; i<cartProduct.length ; i++){ %>
 
@@ -124,11 +123,7 @@
 											
 
 										</td>
-										<% if(cartProduct[i].productDetails[0].offer){ %>
-											<% totalAmount +=cartProduct[i].productDetails[0].offerPrice * cartProduct[i].cartItems.quantity%>
-										<% }else{ %>
-											<% totalAmount +=cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity%>
-										<% } %>
+
 
 								<% } %>
 
@@ -139,8 +134,7 @@
 
 						<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
 							<div>
-								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="number"
-									name="coupon" style="text-align:center;" placeholder="Total Amount = <%= totalAmount %>">
+								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5"  type="text" style="text-align:center;" placeholder="Total Amount = <%= totalAmount %>" value="Total Amount = <%= totalAmount %>" readonly>
 							</div>
 						</div>
 
@@ -167,11 +161,11 @@
 
 							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
 								<p class="stext-111 cl6 p-t-2">
-									<%= address.name %> /
-									<%= address.addressType %> / <%= address.mobile %>
-									<%= address.address %>,
+									<%= address.name %> / <%= address.addressType %> /
+									<%= address.mobile %><br>
+									<%= address.address %>,<br>
 									<%= address.locality %>,
-									<%= address.city %>,
+									<%= address.city %>,<br>
 									<p class="stext-111 cl6 p-t-2">
 										<%= address.state %> -
 										<%= address.pincode %>
