--- a/views/users/checkout/showAddress.ejs
+++ b/views/users/checkout/showAddress.ejs
@@ -162,27 +162,35 @@
 							</div>
 							<div class="size-209">
 								<span class="mtext-110 cl2" id="totalAmount">
-									$ <%= totalPrice %>
+									Rs: <%= subTotal %>
 								</span>
 							</div>
 						</div>
-						<div class="flex-w flex-t bor12 p-t-15 p-b-30">
-							<div class="size-208 w-full-ssm">
+						<div class="flex-w flex-t bor12 p-b-13">
+							<div class="size-208">
 								<span class="stext-110 cl2">
-									Shipping:
+									Discount:
 								</span>
 							</div>
-							<!-- <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-								<p class="stext-111 cl6 p-t-2">
-									There are no shipping methods available. Please double check your address, or contact us if you need any help.
-								</p>
-								<div class="p-t-15">
-									<span class="stext-112 cl8">
-										Calculate Shipping
-									</span>
-								</div>
-							</div> -->
+							<div class="size-209">
+								<span class="mtext-110 cl2" id="totalAmount" style="color: red;">
+									Rs: <%= discount %>
+								</span>
+							</div>
 						</div>
+						<div class="flex-w flex-t bor12 p-b-13">
+							<div class="size-208">
+								<span class="stext-110 cl2">
+									Delivery Charge:
+								</span>
+							</div>
+							<div class="size-209">
+								<span class="mtext-110 cl2" id="totalAmount" style="color: green;">
+									Rs:Free
+								</span>
+							</div>
+						</div>
+
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
 								<span class="mtext-101 cl2">
@@ -190,8 +198,8 @@
 								</span>
 							</div>
 							<div class="size-209 p-t-1">
-								<span class="mtext-110 cl2" id="totalAmount">
-									$ <%= totalPrice %>
+								<span class="mtext-110 cl2" id="totalAmount" style="color: green;">
+									Rs: <%= totalPrice %>
 								</span>
 							</div>
 						</div>
