--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -234,21 +234,38 @@
 								<div class="header-cart-item-txt p-t-8">
 									<a href="/productDetails?productId=<%= cartProduct[i].productDetails[0]._id %>" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
 										<%= cartProduct[i].productDetails[0].name %>
+										<% if(cartProduct[i].productDetails[0].offer){ %>
+											<span style="color: green; font-weight: bold; font-size: larger; margin-left: 10px;">
+												<%= cartProduct[i].productDetails[0].offer %> %
+											</span>
+										<% } %>
 									</a>
-				
-									<span class="header-cart-item-info">
-										<%= cartProduct[i].productDetails[0].price %>
+
+									
+								<% if(cartProduct[i].productDetails[0].offerPrice){ %>
+									<span> RS:  <%= cartProduct[i].productDetails[0].offerPrice %> </span>
+									<span class="stext-105 cl3">
+										<strike> <%= cartProduct[i].productDetails[0].price  %> </strike>
 									</span>
+								<% }else{ %>
+									<span class="header-cart-item-info">
+										RS: <%= cartProduct[i].productDetails[0].price %>
+									</span>
+								<% } %>
 								</div>
 							</li>
-							<% totalAmount += cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %>
+							<% if(cartProduct[i].productDetails[0].offerPrice){ %>
+								<% totalAmount += cartProduct[i].productDetails[0].offerPrice * cartProduct[i].cartItems.quantity %>
+							<% }else{ %>
+								<% totalAmount += cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %>
+							<% } %>
 						<% } %>
 					<% } %>
 				</ul>
 				
 				<div class="w-full">
 					<div class="header-cart-total w-full p-tb-40">
-						Total: $<%= totalAmount %>
+						Total: Rs: <%= totalAmount %>
 					</div>
 
 					<div class="header-cart-buttons flex-w w-full">
@@ -257,7 +274,7 @@
 							View Cart
 						</a>
 
-						<a href=""
+						<a href="shoping-cart.html"
 							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
 							Check Out
 						</a>
@@ -355,7 +372,7 @@
 							<span class="mtext-106 cl2">
 								RS:  <%= product.offerPrice %>
 							</span>
-							<span> <%= product.price %> </span>
+							<span> <strike> <%= product.price %> </strike> </span>
 
 							<span style="color: green; font-weight: bold; font-size: larger; margin-left: 10px;"> <%= product.offer %> %</span>
 						<% }else{ %>
@@ -392,6 +409,8 @@
 
 							<% if( product.quantity === 0 ){ %>
 								<p style="color: red;">Out of Stock</p>
+							<% }else if( product.quantity <= 5 ){ %>
+								<p style="color: red;" > Only <%= product.quantity %> left </p>
 							<% } %>
 
 							<!-- <div class="flex-w flex-r-m p-b-10">
@@ -439,28 +458,20 @@
 
 						<!--  -->
 						<div class="flex-w flex-m p-l-100 p-t-40 respon7">
-							<div class="flex-m bor9 p-r-10 m-r-11">
-								<a href="#"
-									class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100"
-									data-tooltip="Add to Wishlist">
-									<i class="zmdi zmdi-favorite"></i>
-								</a>
+							<!-- <div class="flex-m bor9 p-r-10 m-r-11">
+								<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON" onclick="removeToWishlist('<%= product._id %>')" >
+									<img  src="images/icons/icon-heart-02.png" alt="ICON" onclick="addToWishlist('<%= product._id %>')">
+							</div> -->
+							<div class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
+								<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON" onclick="removeToWishlist('<%= product._id %>')" >
+								<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON" onclick="addToWishlist('<%= product._id %>')">
 							</div>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Facebook">
-								<i class="fa fa-facebook"></i>
-							</a>
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook"> <i class="fa fa-facebook"></i> </a>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Twitter">
-								<i class="fa fa-twitter"></i>
-							</a>
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter"> <i class="fa fa-twitter"></i> </a>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Google Plus">
-								<i class="fa fa-google-plus"></i>
-							</a>
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus"> <i class="fa fa-google-plus"></i> </a>
 						</div>
 					</div>
 				</div>
@@ -1272,6 +1283,36 @@
 				console.error("Error occurred:", error);
 			}
 		}
+
+
+		async function addToWishlist(productId){
+				try {
+					console.log(productId);
+					const response = await axios.post('/products/wishlist',{ productId })
+					if(response.data.success){
+						await Swal.fire({
+							icon:'success',
+							title:'success',
+							text:response.data.message
+						}).then(()=>{
+							window.location.href= `http://localhost:8000/productDetails?productId=${productId}`;
+						})
+					}else{
+						await Swal.fire({
+							icon:'error',
+							title:'error',
+							text:response.data.message
+						})
+						window.location.href=`http://localhost:8000/productDetails?productId=${productId}`;
+					}
+
+				} catch (error) {
+					console.log(error.message);
+				}
+			}
+
+
+
 	</script>
 
 
